<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_habits"
            android:icon="@drawable/icon_habit"
            android:title="@string/menu_habits" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/icon_stats"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_avatarCustom"
            android:icon="@drawable/icon_avatar_custom"
            android:title="@string/menu_avatarCustom" />
        <!--<item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/alarm"
            android:title="@string/alarms" />-->
    </group>
</menu>