<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_tName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:textColor="#000000"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/et_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_tName"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difficulty"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Description"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/bt_dif_1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_button_default"
            android:text="@string/difficulty_1"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt_dif_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_difficulty"
            app:layout_constraintVertical_bias="0.051" />

        <Button
            android:id="@+id/bt_dif_2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/difficulty_2"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button_default"
            app:layout_constraintBottom_toBottomOf="@+id/bt_dif_1"
            app:layout_constraintEnd_toStartOf="@+id/bt_dif_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_dif_1"
            app:layout_constraintTop_toTopOf="@+id/bt_dif_1" />

        <Button
            android:id="@+id/bt_dif_3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/difficulty_3"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button_default"
            app:layout_constraintBottom_toBottomOf="@+id/bt_dif_2"
            app:layout_constraintEnd_toStartOf="@+id/bt_dif_4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_dif_2"
            app:layout_constraintTop_toTopOf="@+id/bt_dif_2" />

        <Button
            android:id="@+id/bt_dif_4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/difficulty_4"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button_default"
            app:layout_constraintBottom_toBottomOf="@+id/bt_dif_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_dif_3"
            app:layout_constraintTop_toTopOf="@+id/bt_dif_3" />

        <TextView
            android:id="@+id/tv_streak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/streak"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_dif_1"
            app:layout_constraintVertical_bias="0.041" />

        <Button
            android:id="@+id/bt_streak_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_default"
            android:text="@string/daily"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt_streak_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_streak"
            app:layout_constraintVertical_bias="0.072" />

        <Button
            android:id="@+id/bt_streak_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_default"
            android:text="@string/weekly"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/bt_streak_1"
            app:layout_constraintEnd_toStartOf="@+id/bt_streak_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_streak_1"
            app:layout_constraintTop_toTopOf="@+id/bt_streak_1" />

        <Button
            android:id="@+id/bt_streak_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_default"
            android:text="@string/monthly"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/bt_streak_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_streak_2"
            app:layout_constraintTop_toTopOf="@+id/bt_streak_2" />

        <TextView
            android:id="@+id/tv_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_streak_2"
            app:layout_constraintVertical_bias="0.064" />

        <Button
            android:id="@+id/bt_tag_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt_tag_meditation"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tags"
            app:layout_constraintVertical_bias="0.096" />

        <Button
            android:id="@+id/bt_tag_meditation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meditation"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button_default"
            app:layout_constraintBottom_toBottomOf="@+id/bt_tag_sport"
            app:layout_constraintEnd_toStartOf="@+id/bt_tag_studies"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_tag_sport"
            app:layout_constraintTop_toTopOf="@+id/bt_tag_sport" />

        <Button
            android:id="@+id/bt_tag_studies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/studies"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button_default"
            app:layout_constraintBottom_toBottomOf="@+id/bt_tag_meditation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_tag_meditation"
            app:layout_constraintTop_toTopOf="@+id/bt_tag_meditation" />

        <Button
            android:id="@+id/bt_tag_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button_default"
            android:text="@string/social"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt_tag_wellbeing"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_tag_sport"
            app:layout_constraintVertical_bias="0.081" />

        <Button
            android:id="@+id/bt_tag_wellbeing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wellbeing"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button_default"
            app:layout_constraintBottom_toBottomOf="@+id/bt_tag_social"
            app:layout_constraintEnd_toStartOf="@+id/bt_tag_diet"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_tag_social"
            app:layout_constraintTop_toTopOf="@+id/bt_tag_social" />

        <Button
            android:id="@+id/bt_tag_diet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diet"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button_default"
            app:layout_constraintBottom_toBottomOf="@+id/bt_tag_wellbeing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_tag_wellbeing"
            app:layout_constraintTop_toTopOf="@+id/bt_tag_wellbeing" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>