<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/iv_body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/iv_body2"
        app:layout_constraintEnd_toStartOf="@+id/iv_body2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_body2"
        app:srcCompat="@drawable/circle_body_yellow"
        android:contentDescription="@string/yellow_t_shirt"/>

    <ImageView
        android:id="@+id/iv_body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/iv_body3"
        app:layout_constraintEnd_toStartOf="@+id/iv_body3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_body1"
        app:layout_constraintTop_toTopOf="@+id/iv_body3"
        app:srcCompat="@drawable/circle_body_blue"
        android:contentDescription="@string/blue_t_shirt"/>

    <ImageView
        android:id="@+id/iv_body3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/iv_body4"
        app:layout_constraintEnd_toStartOf="@+id/iv_body4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_body2"
        app:layout_constraintTop_toTopOf="@+id/iv_body4"
        app:srcCompat="@drawable/circle_body_red"
        android:contentDescription="@string/red_t_shirt"/>

    <ImageView
        android:id="@+id/iv_body4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_body3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/circle_body_green"
        android:contentDescription="@string/green_t_shirt"/>
</androidx.constraintlayout.widget.ConstraintLayout>