<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameScreenActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:text="@string/get_some_coins"
        android:textColor="#ffffff"
        android:layout_above="@id/play"
        android:layout_below="@id/moneyGame"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_button_default"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:text="@string/play"
        android:textColor="#FFFFFF"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/moneyGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/money"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />


</RelativeLayout>